      Remove dead code that supported Septel devices.
      Remove outdated code related to AirPcap HW.
        The Riverbed AirPcap Product has reached End of Availability
        (EOA) as of December 31, 2017
      Make pcap_compile() error messages more uniform and consistent.
      Deprecate pcap_compile_nopcap().
      Deprecate bpf_filter().
    Packet filtering:
      Add support for Block Ack Req and Block Ack frame types (pull
        request #1039).
      Add support for filtering packets encapsulated with VXLAN (pull
        request #1273).
      Eliminate trailing space in bpf_image() result.
      Fix DECnet packet filtering on big-endian hosts.
      Fix various failures to reject invalid DECnet primitives.
      Require "vpi" and "vci" values to be within valid ranges.
      Initialize the scratch memory store to 0.
      Require "[wlan] dir" integer value to be within range.
      Fix the != comparison for ATM and MTP field values.
      Require a live capture for all Linux BPF extensions.
      Have "outbound" mean Tx only for DLT_SLIP.
      Filter Linux SocketCAN frames in userland if necessary.
      Enable "[wlan] dir/type/subtype" for DLT_PPI.
      Require "(iso|isis) proto" values to be within valid ranges.
      Use the correct IS-IS PDU type offset for DLT_C_HDLC.
      Use the correct bit mask for IS-IS PDU type value.
      Fix the "|" and "&" operators of the "byte" primitive.
      Require "byte" argument value to be within range.
      Require "link proto" argument value to be within range.
      Require "(ip|ip6) proto" value to be within range.
      Require "protochain" value to be within range.
      Always enable the "gateway" primitive.
      Properly reject "link proto" for DLT_BACNET_MS_TP.
      Extend "link (host|broadcast)" support onto DLT_BACNET_MS_TP.
      Do not try matching RFC 1051 system codes for ARCnet.
      Enable various primitives for DLT_DSA_TAG_BRCM and DLT_DSA_TAG_DSA.