@@ -20,6 +20,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       Make pcap_compile() error messages more uniform and consistent.
       Deprecate pcap_compile_nopcap().
       Deprecate bpf_filter().
+      Indicate no-capture and no-inject devices.
     Packet filtering:
       Add support for Block Ack Req and Block Ack frame types (pull
         request #1039).
